# distributed_memory

./: CMakeLists.txt  Readme.txt  test_dm.cpp
src/: _dm_task.h  dm_communication.cpp  dm_communication.h  dm_localDB.cpp  dm_localDB.h  dm_task.cpp  dm_task.h
src/communication/: dm_communication.h  dm_nodes_communication.cpp  dm_nodes_protocol.h
src/misc/: conversions.cpp  conversions.h
